# SmartCEO

./: .gitignore  README.md  USER_GUIDE.md
desktop_app/: .gitignore  build-cross-platform.sh  index.html  package-lock.json  package.json  vite.config.js
desktop_app/src/: App.jsx  main.jsx
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/src-tauri/src/: main.rs
desktop_app/src/components/: EmailSearchView.jsx  PstProcessorView.jsx
desktop_app/src/styles/: App.css
files_scanner/: Cargo.toml  cross-build.sh  windows-only-build.bat
files_scanner/src/: main.rs
vector_engine/: requirements.txt
vector_engine/py-src/: core.py  data_loader.py  db_explorer.py
vector_engine/src/: app.py  data_loader.py  db_explorer.py  engine_cli.py  pst_processor.py  vector_engine_cli.spec
vector_engine/tests/: chroma_collections.py  test_app.py
