[package]
name = "file-scanner"
version = "0.1.0"
edition = "2021"
authors = ["AI Assistant"]
description = "Cross-platform file scanner for AI agent data discovery"

[dependencies]
walkdir = "2.3"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2.0"
structopt = "0.3"
rayon = "1.7"
log = "0.4"
env_logger = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["combaseapi", "objbase", "shobjidl", "shlobj"] }
winreg = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "file-scanner"
path = "src/main.rs"
